# py-trelliscope2

./: .RData  .Rhistory  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ideas.md  pyproject.toml  requirements.txt  setup.py  test_demo_notebooks.py  test_showcase_notebooks.py
.claude/: CLAUDE.md  prompt.md
.claude_debugging/: APPROACH_2_SUMMARY.md  README_REGENERATE.md  REGENERATE_DISPLAYS.md  diagnostic.html  panel_server.py  phase3_complete_demo.py  rest_panels_example.py  test_browser_comprehensive.py  test_dash_17_demo.py  test_dash_search_smoke.py  test_dash_smoke.py  test_dash_sorting_smoke.py  test_dash_viewer.py  test_debug_viewer.py  test_safari_fix.py  verify_viewer_fix.py
.claude_plans/: BLANK_PAGE_FIX_SUMMARY.md  BROWSER_TESTING_GUIDE.md  CODEBASE_ANALYSIS.md  CODE_REVIEW_REPORT.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_INTEGRATION_SUCCESS.md  DUAL_DISPLAY_DEMO_COMPLETE.md  DUAL_DISPLAY_FINAL_SUCCESS.md  ENVIRONMENT_SETUP.md  EXAMPLE_GENERATION_PROMPT.md  FACTOR_INDEXING_SOLUTION.md  FILE_BASED_PANELS_SOLUTION.md  FINAL_STATUS.md  FORK_IMPLEMENTATION_GUIDE.md  FORK_IMPLEMENTATION_SUCCESS.md  FORK_READY_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  METADATA_FILES_IMPLEMENTATION.md  NEXT_SESSION_PROMPT.md  NEXT_STEPS_ANALYSIS.md  NOTEBOOK_DEBUG_ANALYSIS.md  NOTEBOOK_EXACT_PATTERN_UPDATE.md  NOTEBOOK_FIX_SUMMARY.md  NOTEBOOK_KERNEL_CRASH_FIX.md  NOTEBOOK_TESTING_COMPLETE.md  NOTEBOOK_VIEWER_FIX_COMPLETE.md  NOTEBOOK_VIEWER_PORT_ISSUE.md  PANEL_DISPLAY_FIX.md  PANEL_DISPLAY_SUCCESS_SUMMARY.md  PHASE4_SHOWCASE_COMPLETION.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_BROWSER_VALIDATION_SUMMARY.md  PHASE_3_COMPLETE.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_PROGRESS.md  PHASE_4_COMPLETE.md  PHASE_4_PLAN.md  PHASE_4_PROGRESS.md  PHASE_4_SHOWCASE_COMPLETE.md  (+31 more)
.claude_plans/MODIFIED_FILES/: PanelGraphicWrapper.tsx
.claude_plans/PATCHES/: PanelGraphicWrapper.tsx.patch  configs.d.ts.patch
.claude_prompts/: sonnet.md
.claude_research/: TRELLISCOPEJS_LIB_PANEL_INTERFACE_RESEARCH.json  TRELLISCOPE_RESEARCH.json  TRELLISCOPE_TECHNICAL_ANALYSIS.md
.github/workflows/: ci.yml  docs-build.yml  docs.yml  publish.yml
_data/: create_gas_demand_dataset.py  jodi_refinery_production_data.csv
docs/: API_DOCUMENTATION_SUMMARY.md  Makefile  README.md  conf.py  requirements.txt
docs/advanced/: architecture.rst
docs/api/: inference.rst  meta.rst  panels.rst  server.rst
docs/user_guide/: creating_displays.rst  examples.rst  meta_variables.rst
examples/: 01_getting_started.ipynb  02_panel_rendering.ipynb  10_viewer_integration.ipynb  11_working_viewer_demo.ipynb  12_launch_viewer.ipynb  13_refinery_margins_demo.ipynb  14_launch_refinery_viewer.ipynb  15_refinery_plotly_demo.ipynb  16_launch_plotly_viewer.ipynb  17_dual_display_demo.ipynb  README.md  cleanup_safari_tests.py  create_r_example.R  demo_dash_viewer.ipynb  panel_server.py  regenerate_notebook_demo.py  rest_panels_example.py  simple_static_display.py  simple_static_example.py  start_notebook_viewer.sh  test_dash_plotly_panels.py  test_dash_views_smoke.py  test_debug_viewer.py  test_notebook_display.py  test_notebook_pattern.py  test_viewer.py  trelliscope.R  validate_phase3.py  verify_viewer_fix.py
examples/demo_notebooks/: 01_plotly_interactive_charts.ipynb  02_mixed_panel_types.ipynb  03_keyboard_shortcuts_navigation.ipynb  04_views_export_workflows.ipynb  05_financial_portfolio_analysis.ipynb  README.md
examples/output/: APPROACH_2_IMPLEMENTATION.md  FINAL_COMPREHENSIVE_TEST.html  FINAL_INVESTIGATION_REPORT.md  HTML_PANEL_ANALYSIS.md  POC_SUCCESS.md  config.json  debug_viewer.html  direct_simple_static.html  displayInfo.json  id  index_debug_verbose.html  index_diagnostic.html  rest_demo.html  simple_static_test.html  simple_static_v3.html  test_callback_check.html  test_correct_paths.html  test_diagnose.html  test_directory_path.html  test_final_fix.html  test_final_working.html  test_image_urls.html  test_inline_config.html  test_intercept_fetch.html  test_jsonp_old_viewer.html  test_load_order.html  test_metadata_fields.html  test_metadata_timing.html  test_minimal_embedded.html  test_panel_load.html  test_preload_jsonp.html  test_react_component.html  test_rest_integration.html  test_rest_panels.html  test_server_diagnostic.html  test_with_paths_v2.html  test_working_combo.html
examples/phase4_showcase/: 01_multi_model_comparison.ipynb  02_hyperparameter_tuning.ipynb  03_cv_fold_analysis.ipynb  05_multi_series_scale.ipynb  README.md
examples/templates/: QUICK_START.md  README.md  static_display_template.py
examples/test_static/: config.json  (+1 more)
tests/: __init__.py  test_metadata_generation.py
trelliscope/: __init__.py  config.py  display.py  export.py  inference.py  meta.py  multi_display.py  panel_interface.py  py.typed  serialization.py  server.py  viewer.py  viewer_html.py
(+249 files in other folders)
