[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-trelliscope2"
version = "0.1.0"
description = "Interactive visualization displays for exploring collections of plots"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "py-trelliscope contributors"}
]
maintainers = [
    {name = "py-trelliscope contributors"}
]
keywords = [
    "visualization",
    "interactive",
    "plotting",
    "faceting",
    "data-science",
    "pandas",
    "trelliscope"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "attrs>=21.0.0",
    "typing-extensions>=4.0.0;python_version<'3.11'"
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.3.0",
    "plotly>=5.0.0"
]
server = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pylint>=2.15.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "pre-commit>=2.20.0",
    "bandit>=1.7.0",
    "safety>=2.0.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0"
]
all = [
    "py-trelliscope2[viz,server,dev,docs]"
]

[project.urls]
Homepage = "https://github.com/trelliscope/py-trelliscope2"
Documentation = "https://py-trelliscope2.readthedocs.io"
Repository = "https://github.com/trelliscope/py-trelliscope2"
Issues = "https://github.com/trelliscope/py-trelliscope2/issues"

[tool.setuptools]
packages = ["trelliscope", "trelliscope.panels", "trelliscope.utils"]

[tool.setuptools.package-data]
trelliscope = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.main]
max-line-length = 88
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
]
good-names = ["i", "j", "k", "df", "ax", "fig", "id"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.similarities]
min-similarity-lines = 10

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "trelliscope.meta"
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "trelliscope.inference"
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "trelliscope.display"
disable_error_code = ["call-arg"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["trelliscope"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B601"]
